--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -15,10 +15,10 @@
         <!-- EOF CSS INCLUDE -->                                     
     </head>
     <body>
-        <div class = "home-button">
-            <button type="button" class="btn btn-primary">Primary</button>
-        </div>
         <div class="login-container lightmode">
+            <div class = "home-button">
+               <button type="button" class="btn btn-warning">Home</button>
+            </div>
         
             <div class="login-box animated fadeInDown">
                 <div class="login-logo"></div>
