--- a/views/subdomain_login.handlebars
+++ b/views/subdomain_login.handlebars
@@ -51,8 +51,11 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-lg-6 col-lg-offset-3">
+                        <div class="col-lg-5 col-md-offset-1">
                             <button class="btn btn-primary btn-block" name="search" >Search</button>
+                        </div>
+                        <div class="col-md-5 col-md-offset-0">
+                            <button type="home" class="btn btn-info btn-block btn-facebook">Home</button>
                         </div>
                     </div>
                     </form>
