--- a/views/account/login.handlebars
+++ b/views/account/login.handlebars
@@ -50,7 +50,7 @@
                             <button class="btn btn-info btn-block">Log In</button>
                         </div>
                         <div class="col-md-3">
-                            <button type="home" class="btn btn-info btn-block btn-facebook" onclick="location.href='/logout'">Home</button>
+                            <button type="home" class="btn btn-info btn-block btn-facebook" onclick="location.href='/'">Home</button>
                         </div>
                     </div>
                     <div class="login-subtitle">
