dont know how to redirect the home button back home =(

--- a/views/subdomain_login.handlebars
+++ b/views/subdomain_login.handlebars
@@ -55,7 +55,7 @@
                             <button class="btn btn-primary btn-block" name="search" >Search</button>
                         </div>
                         <div class="col-md-5 col-md-offset-0">
-                            <button type="home" class="btn btn-info btn-block btn-facebook" onclick="location.href='/logout'">Home</button>
+                           <a  href="/home"><button type="home" class="btn btn-info btn-block btn-facebook">Home</button></a>
                         </div>
                     </div>
                     </form>
