--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -63,7 +63,7 @@
                             <button type="submit" class="btn btn-success btn-block">Sign Up!</button>
                         </div>
                         <div class="col-md-4">
-                            <a  location.href="/home"><button type="home" class="btn btn-info btn-block btn-facebook">Home</button></a>
+                            <a  href="/home"><button type="home" class="btn btn-info btn-block btn-facebook">Home</button></a>
                         </div>
                     </div>
                     </form>
