--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -139,7 +139,11 @@
                             <div class="block-heading block-heading-centralized">
                                 <h2 class="heading-underline"><strong>FUN</strong>ctional</h2>
                                 <div class="block-heading-text">
-                                    Proin luctus nulla fringilla massa euismod commodo. Donec sit amet elementum libero. Curabitur ut lorem id tellus malesuada tincidunt et eget purus. Cras molestie, velit quis viverra ultrices, tortor erat suscipit arcu, a ullamcorper neque lorem et massa. Praesent facilisis tellus nec rutrum luctus. Curabitur non venenatis metus, vitae rhoncus risus. Donec quis mattis est. Proin ut augue vel odio condimentum ornare.
+                                    Receptional is easy and FUN to use. If your business always have long waits,
+                                    and lots of customers to keep track of Receptional is just for you! You can
+                                    create your very own forms or use the default provided for you and all you have
+                                    to do is wait as customers sign in. No hastles with paperwork, no skipping customers
+                                    and most important no unhappy customers!
                                 </div>
                             </div>
                         </div>
