--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -133,14 +133,14 @@
                         </div>
                     </div>
 
-                    <div class="row ">
+                    <div class="row">
 
-                        <div class="col-md-3 col-sm-3 col-xs-3">
-                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
+                        <div class="col-md-3 col-sm-3 col-xs-3" style="float: none; margin: 0 auto;">
+                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn" >
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user.jpg" alt="John Doe" class="img-circle">
                                 </div>
-                                <h5>John Doe</h5>
+                                <h5>Marvin Chau</h5>
                                 <div class="text-column-subtitle">UI/UX Designer</div>
                                 <div class="text-column-info">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie dapibus nulla sed pellentesque.
@@ -156,7 +156,7 @@
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user2.jpg" alt="John Doe" class="img-circle">
                                 </div>
-                                <h5>John Doe</h5>
+                                <h5>Martin Nguyen</h5>
                                 <div class="text-column-subtitle">UI/UX Designer</div>
                                 <div class="text-column-info">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie dapibus nulla sed pellentesque.
@@ -169,7 +169,7 @@
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user3.jpg" alt="Dmitry Ivaniuk" class="img-circle">
                                 </div>
-                                <h5>Dmitry Ivaniuk</h5>
+                                <h5>Dennis Kim</h5>
                                 <div class="text-column-subtitle">Web Developer</div>
                                 <div class="text-column-info">
                                     Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
@@ -182,7 +182,7 @@
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user4.jpg" alt="Nadia Ali" class="img-circle">
                                 </div>
-                                <h5>Nadia Ali</h5>
+                                <h5>Gabe Maze-Rogers</h5>
                                 <div class="text-column-subtitle">Singer &amp; Songwriter</div>
                                 <div class="text-column-info">
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -195,7 +195,7 @@
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user5.jpg" alt="Brad Pitt" class="img-circle">
                                 </div>
-                                <h5>Brad Pitt</h5>
+                                <h5>Michelle Bui</h5>
                                 <div class="text-column-subtitle">Actor &amp; Producer</div>
                                 <div class="text-column-info">
                                     Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -211,7 +211,7 @@
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user6.jpg" alt="John Doe" class="img-circle">
                                 </div>
-                                <h5>John Doe</h5>
+                                <h5>Kevin Tran</h5>
                                 <div class="text-column-subtitle">UI/UX Designer</div>
                                 <div class="text-column-info">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie dapibus nulla sed pellentesque.
@@ -224,7 +224,7 @@
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user7.jpg" alt="Dmitry Ivaniuk" class="img-circle">
                                 </div>
-                                <h5>Dmitry Ivaniuk</h5>
+                                <h5>Patrick Juan</h5>
                                 <div class="text-column-subtitle">Web Developer</div>
                                 <div class="text-column-info">
                                     Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
@@ -237,7 +237,7 @@
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user8.jpg" alt="Nadia Ali" class="img-circle">
                                 </div>
-                                <h5>Nadia Ali</h5>
+                                <h5>Kelly Truc Le</h5>
                                 <div class="text-column-subtitle">Singer &amp; Songwriter</div>
                                 <div class="text-column-info">
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -250,7 +250,7 @@
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user9.jpg" alt="Brad Pitt" class="img-circle">
                                 </div>
-                                <h5>Brad Pitt</h5>
+                                <h5>Jeremy Leu</h5>
                                 <div class="text-column-subtitle">Actor &amp; Producer</div>
                                 <div class="text-column-info">
                                     Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
@@ -266,7 +266,7 @@
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user10.jpg" alt="John Doe" class="img-circle">
                                 </div>
-                                <h5>John Doe</h5>
+                                <h5>Harvey Yu</h5>
                                 <div class="text-column-subtitle">UI/UX Designer</div>
                                 <div class="text-column-info">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie dapibus nulla sed pellentesque.
@@ -279,7 +279,7 @@
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user11.jpg" alt="Dmitry Ivaniuk" class="img-circle">
                                 </div>
-                                <h5>Dmitry Ivaniuk</h5>
+                                <h5>Royal Hien</h5>
                                 <div class="text-column-subtitle">Web Developer</div>
                                 <div class="text-column-info">
                                     Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
@@ -292,7 +292,7 @@
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user12.jpg" alt="Nadia Ali" class="img-circle">
                                 </div>
-                                <h5>Nadia Ali</h5>
+                                <h5>Wingo Zhai</h5>
                                 <div class="text-column-subtitle">Singer &amp; Songwriter</div>
                                 <div class="text-column-info">
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -305,7 +305,7 @@
                                 <div class="text-column-image">
                                     <img src="assets/img/users/user13.jpg" alt="Brad Pitt" class="img-circle">
                                 </div>
-                                <h5>Brad Pitt</h5>
+                                <h5>Hilary Louie</h5>
                                 <div class="text-column-subtitle">Actor &amp; Producer</div>
                                 <div class="text-column-info">
                                     Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
