--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -106,7 +106,8 @@
                     <div class="block-heading block-heading-centralized this-animate" data-animate="fadeInDown">
                         <h2 class="heading-underline">Welcome to Jackson 5</h2>
                         <div class="block-heading-text">
-                            Aenean enim ipsum, suscipit sit amet nisl vitae, convallis vehicula urna. Duis iaculis nunc at enim ultrices pharetra. Maecenas consectetur orci ut condimentum porttitor. Vivamus massa lorem, sollicitudin ac rhoncus ut, fringilla eget purus. In finibus nisl sed neque pulvinar.
+                            Jackson 5 is a dedicated group of software engineers whose main goal is to provide you
+                            with an excellent experience with Receptional. 
                         </div>
                     </div>
 
@@ -129,7 +130,8 @@
                     <div class="block-heading block-heading-centralized this-animate" data-animate="fadeInDown">
                         <h2 class="heading-underline">Meet Our Team</h2>
                         <div class="block-heading-text">
-                            Cras ut neque metus. Morbi pharetra purus sed enim sagittis, vitae cursus tortor tempus. Vestibulum eu gravida quam, nec congue odio. Nullam id hendrerit sem.
+                            Here is our team! Each individual has put in a lot of hardwork and time to make receptional
+                            possible.
                         </div>
                     </div>
 
@@ -141,10 +143,7 @@
                                     <img src="assets/img/users/user.jpg" alt="John Doe" class="img-circle">
                                 </div>
                                 <h5>Marvin Chau</h5>
-                                <div class="text-column-subtitle">UI/UX Designer</div>
-                                <div class="text-column-info">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie dapibus nulla sed pellentesque.
-                                </div>
+                                <div class="text-column-subtitle">Team Leader</div>
                             </div>
                         </div>
 
@@ -157,10 +156,7 @@
                                     <img src="assets/img/users/user2.jpg" alt="John Doe" class="img-circle">
                                 </div>
                                 <h5>Martin Nguyen</h5>
-                                <div class="text-column-subtitle">UI/UX Designer</div>
-                                <div class="text-column-info">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie dapibus nulla sed pellentesque.
-                                </div>
+                                <div class="text-column-subtitle">Front-end Lead</div>
                             </div>
                         </div>
 
@@ -170,10 +166,7 @@
                                     <img src="assets/img/users/user3.jpg" alt="Dmitry Ivaniuk" class="img-circle">
                                 </div>
                                 <h5>Dennis Kim</h5>
-                                <div class="text-column-subtitle">Web Developer</div>
-                                <div class="text-column-info">
-                                    Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                                </div>
+                                <div class="text-column-subtitle">Database Engineer</div>
                             </div>
                         </div>
 
@@ -183,10 +176,7 @@
                                     <img src="assets/img/users/user4.jpg" alt="Nadia Ali" class="img-circle">
                                 </div>
                                 <h5>Gabe Maze-Rogers</h5>
-                                <div class="text-column-subtitle">Singer &amp; Songwriter</div>
-                                <div class="text-column-info">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                                </div>
+                                <div class="text-column-subtitle">Database Engineer</div>
                             </div>
                         </div>
 
@@ -196,10 +186,7 @@
                                     <img src="assets/img/users/user5.jpg" alt="Brad Pitt" class="img-circle">
                                 </div>
                                 <h5>Michelle Bui</h5>
-                                <div class="text-column-subtitle">Actor &amp; Producer</div>
-                                <div class="text-column-info">
-                                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                                </div>
+                                <div class="text-column-subtitle">UI/UX Designer</div>
                             </div>
                         </div>
 
@@ -213,9 +200,6 @@
                                 </div>
                                 <h5>Kevin Tran</h5>
                                 <div class="text-column-subtitle">UI/UX Designer</div>
-                                <div class="text-column-info">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie dapibus nulla sed pellentesque.
-                                </div>
                             </div>
                         </div>
 
@@ -227,7 +211,7 @@
                                 <h5>Patrick Juan</h5>
                                 <div class="text-column-subtitle">Web Developer</div>
                                 <div class="text-column-info">
-                                    Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                                    Don't trust this guy. He's the worst on our team.
                                 </div>
                             </div>
                         </div>
@@ -238,10 +222,7 @@
                                     <img src="assets/img/users/user8.jpg" alt="Nadia Ali" class="img-circle">
                                 </div>
                                 <h5>Kelly Truc Le</h5>
-                                <div class="text-column-subtitle">Singer &amp; Songwriter</div>
-                                <div class="text-column-info">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                                </div>
+                                <div class="text-column-subtitle">Web Developer</div>
                             </div>
                         </div>
 
@@ -251,10 +232,7 @@
                                     <img src="assets/img/users/user9.jpg" alt="Brad Pitt" class="img-circle">
                                 </div>
                                 <h5>Jeremy Leu</h5>
-                                <div class="text-column-subtitle">Actor &amp; Producer</div>
-                                <div class="text-column-info">
-                                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                                </div>
+                                <div class="text-column-subtitle">UI/UX Designer</div>
                             </div>
                         </div>
 
@@ -267,10 +245,7 @@
                                     <img src="assets/img/users/user10.jpg" alt="John Doe" class="img-circle">
                                 </div>
                                 <h5>Harvey Yu</h5>
-                                <div class="text-column-subtitle">UI/UX Designer</div>
-                                <div class="text-column-info">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie dapibus nulla sed pellentesque.
-                                </div>
+                                <div class="text-column-subtitle">Pokemon Master</div>
                             </div>
                         </div>
 
@@ -280,10 +255,7 @@
                                     <img src="assets/img/users/user11.jpg" alt="Dmitry Ivaniuk" class="img-circle">
                                 </div>
                                 <h5>Royal Hien</h5>
-                                <div class="text-column-subtitle">Web Developer</div>
-                                <div class="text-column-info">
-                                    Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                                </div>
+                                <div class="text-column-subtitle">Security Expert</div>
                             </div>
                         </div>
 
@@ -293,10 +265,7 @@
                                     <img src="assets/img/users/user12.jpg" alt="Nadia Ali" class="img-circle">
                                 </div>
                                 <h5>Wingo Zhai</h5>
-                                <div class="text-column-subtitle">Singer &amp; Songwriter</div>
-                                <div class="text-column-info">
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                                </div>
+                                <div class="text-column-subtitle">Public Relations</div>
                             </div>
                         </div>
 
@@ -306,10 +275,7 @@
                                     <img src="assets/img/users/user13.jpg" alt="Brad Pitt" class="img-circle">
                                 </div>
                                 <h5>Hilary Louie</h5>
-                                <div class="text-column-subtitle">Actor &amp; Producer</div>
-                                <div class="text-column-info">
-                                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                                </div>
+                                <div class="text-column-subtitle">UI/UX Designer</div>
                             </div>
                         </div>
 
