--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -140,10 +140,10 @@
                                 <h2 class="heading-underline"><strong>FUN</strong>ctional</h2>
                                 <div class="block-heading-text">
                                     Receptional is easy and FUN to use. If your business always have long waits,
-                                    and lots of customers to keep track of Receptional is just for you! You can
+                                    and lots of customers to keep track of, Receptional is just for you! You can
                                     create your very own forms or use the default provided for you and all you have
                                     to do is wait as customers sign in. No hastles with paperwork, no skipping customers
-                                    and most important no unhappy customers!
+                                    and most importantly, no unhappy customers!
                                 </div>
                             </div>
                         </div>
