--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -104,9 +104,9 @@
                 <div class="page-content-holder">
 
                     <div class="block-heading block-heading-centralized this-animate" data-animate="fadeInDown">
-                        <h2 class="heading-underline">Welcome to Jackson 5</h2>
+                        <h2 class="heading-underline">Welcome to Receptional</h2>
                         <div class="block-heading-text">
-                            Jackson 5 is a dedicated group of software engineers whose main goal is to provide you
+                            Here are a dedicated group of software engineers whose main goal is to provide you
                             with an excellent experience with Receptional. 
                         </div>
                     </div>
