home button moved to a different spot

--- a/views/account/login.handlebars
+++ b/views/account/login.handlebars
@@ -26,6 +26,11 @@
     <body>
         
         <div class="login-container lightmode">
+            <div class="col-md-1">
+                <div class= "home-button">
+                    <a href="/"><button class="btn btn-info btn-block btn-facebook"> Home </button></a>
+                </div>
+            </div>
         
             <div class="login-box animated fadeInDown">
                 <div class="login-logo"></div>
@@ -46,11 +51,8 @@
                         <div class="col-md-6">
                             <a href="/forgot" class="btn btn-link btn-block">Forgot your password?</a>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <button class="btn btn-info btn-block">Log In</button>
-                        </div>
-                        <div class="col-md-3">
-                           <a  href="/home"><button type="home" class="btn btn-info btn-block btn-facebook">Home</button></a>
                         </div>
                     </div>
                     <div class="login-subtitle">
