--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -16,7 +16,11 @@
     </head>
     <body>
         <div class="login-container lightmode">
-           
+           <div class="col-md-1">
+                <div class= "home-button">
+                    <a href="/"><button class="btn btn-info btn-block btn-facebook"> Home </button></a>
+                </div>
+            </div>
         
             <div class="login-box animated fadeInDown">
                 <div class="login-logo">
@@ -61,9 +65,6 @@
                         </div>
                         <div class="col-md-4">
                             <button type="submit" class="btn btn-success btn-block">Sign Up!</button>
-                        </div>
-                        <div class="col-md-4">
-                            <a  href="/home"><button type="home" class="btn btn-info btn-block btn-facebook">Home</button></a>
                         </div>
                     </div>
                     </form>
