--- a/views/subdomain_login.handlebars
+++ b/views/subdomain_login.handlebars
@@ -40,6 +40,11 @@
         {{/if}}
 
         <div class="login-container lightmode">
+            <div class="col-md-1">
+                <div class= "home-button">
+                    <a href="/"><button class="btn btn-info btn-block btn-facebook"> Home </button></a>
+                </div>
+            </div>
             <div class="login-box animated fadeInDown">
                 <div class="login-logo"></div>
                 <div class="login-body">
@@ -53,9 +58,6 @@
                     <div class="form-group">
                         <div class="col-lg-5 col-md-offset-1">
                             <button class="btn btn-primary btn-block" name="search" >Search</button>
-                        </div>
-                        <div class="col-md-5 col-md-offset-0">
-                           <a  href="/home"><button type="home" class="btn btn-info btn-block btn-facebook">Home</button></a>
                         </div>
                     </div>
                     </form>
