Changed logo link to go to home/dashboard Home button in login/signup/subdomainlogin redirects to home

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -31,7 +31,7 @@
 
                 <!-- page logo -->
                 <div class="logo">
-                    <a href="/home">Receptional</a>
+                    <a href="/">Receptional</a>
                 </div>
                 <!-- ./page logo -->
 
