--- a/views/subdomain_login.handlebars
+++ b/views/subdomain_login.handlebars
@@ -42,7 +42,7 @@
         <div class="login-container lightmode">
             <div class="col-md-1">
                 <div class= "home-button">
-                    <a href="/"><button class="btn btn-info btn-block btn-facebook"> Home </button></a>
+                    <a href="/"><button class="btn btn-info btn-block btn-facebook" onclick="location.href = '/';"> Home </button></a>
                 </div>
             </div>
             <div class="login-box animated fadeInDown">
