--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -60,10 +60,10 @@
                         </div>
                     </div>
                     <div class="form-group">
-                       <div class="col-md-4">
+                       <div class="col-md-5 col-md-offset-1">
                             <button type="reset" class="btn btn-primary btn-block">Clear Input</button>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-5 col-md-offset-0">
                             <button type="submit" class="btn btn-success btn-block">Sign Up!</button>
                         </div>
                     </div>
