--- a/views/subdomain_login.handlebars
+++ b/views/subdomain_login.handlebars
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-lg-5 col-md-offset-1">
+                        <div class="col-lg-6 col-lg-offset-3">
                             <button class="btn btn-primary btn-block" name="search" >Search</button>
                         </div>
                     </div>
