--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -35,6 +35,66 @@
 
     </head>
     <body>
+            <!-- page container -->
+    <div class="page-container">
+
+        <!-- page header -->
+        <div class="page-header">
+
+            <!-- page header holder -->
+            <div class="page-header-holder">
+
+                <!-- page logo -->
+                <div class="logo">
+                    <a href="/">Receptional</a>
+                </div>
+                <!-- ./page logo -->
+
+
+                <!-- search -->
+                <div class="search">
+                    <div class="search-button"><span class="fa fa-search"></span></div>
+                    <div class="search-container animated fadeInDown">
+                        <form action="#" method="post">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Search..." />
+                                <div class="input-group-btn">
+                                    <button class="btn btn-primary"><span class="fa fa-search"></span></button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <!-- ./search -->
+
+                <!-- nav mobile bars -->
+                <div class="navigation-toggle">
+                    <div class="navigation-toggle-button"><span class="fa fa-bars"></span></div>
+                </div>
+                <!-- ./nav mobile bars -->
+
+                <!-- navigation -->
+                <ul class="navigation">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                    {{#if user}}
+                        <li><a href="/logout">Log Out</a></li>
+                    {{else}}
+                        <li><a href="/signup">Sign Up</a></li>
+                        <li><a href="/login">Owner Login</a></li>
+                        <li><a href="/subdomain_login">Find Your Company</a></li>
+                    {{/if}}
+                </ul>
+                <!-- ./navigation -->
+
+
+            </div>
+            <!-- ./page header holder -->
+
+        </div>
+        <!-- ./page header -->
+    </div>
         <div class="login-container lightmode">
            <div class="col-md-1">
                 <div class= "home-button">
