--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -10,7 +10,8 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <!-- END META SECTION -->
         
-        <!-- CSS INCLUDE -->        
+        <!-- CSS INCLUDE -->       
+        <link rel="stylesheet" type="text/css" href="css/styles.css" media="screen" />  
         <link rel="stylesheet" type="text/css" id="theme" href="css/theme-default.css"/>
         <!-- EOF CSS INCLUDE -->
 
